Bug 1623086 - Do not unveil an already visible pledge file since that interferes with other unveils. r=gcp

tested on openbsd since a bunch of releases, no impact for users on tier-1

Differential Revision: https://phabricator.services.mozilla.com/D116561